# citrus

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
citrus/: core.py  errors.py  tests.py
