[tool.poetry]
name = "citrus"
version = "0.0.4"
description = "A more convenient interface to doing Binary Linear Programming with PuLP"
authors = ["Brian Schiller <bgschiller@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bgschiller/citrus"
repository = "https://github.com/bgschiller/citrus"
keywords = ["pulp", "linear", "optimization"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
]
include = [
  "LICENSE"
]
[tool.poetry.dependencies]
python = "^3.6"
pulp = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
